Added plugin to output the code language as a title

--- a/template/uetke/static/css/uetke.css
+++ b/template/uetke/static/css/uetke.css
@@ -207,23 +207,38 @@ body{
     top:0;
  }
 
-.highlight{
+.code{
     /*box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);*/
     background-color: rgba(202,202,202,0.34);
     margin-left: 0rem;
     margin-right: 0rem;
-    padding-left: 0.5rem;
     font-size: smaller;
+    border-radius: 5px;
+}
+
+.code .lexer{
+    background-color: #ecd9a3;
+    margin-bottom: 1.25rem;
+    padding-left: 0.5rem;
+    padding-bottom: 0.25rem;
+    padding-top: 0.25rem;
+    border-radius: 5px;
+}
+
+.highlight{
+    padding-left: 0.5rem;
 }
 
 @media screen and (min-width: 701px){
-    .highlight{
+    .code{
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
         margin-left: 2rem;
         margin-right: 2rem;
-        padding-left: 0.5rem;
         font-size: smaller;
-}
+    }
+    .highlight{
+        padding-left: 0.5rem;
+    }
 }
 
 
