Added self-hosted comments

--- a/template/uetke/templates/article.html
+++ b/template/uetke/templates/article.html
@@ -80,9 +80,9 @@ background-attachment: fixed;">
         {% endif %}
       </article>
       {% include 'related_articles.html' %}
-      <!--<div class="comment-section"><!-- Comments -->
-
-      <!--</div>-->
+      <div class="comment-section"><!-- Comments -->
+        {% include 'flasqus_script.html' %}
+      </div>
     </div>
 
     <!-- SIDEBAR -->
