--- a/template/uetke/templates/article.html
+++ b/template/uetke/templates/article.html
@@ -79,10 +79,38 @@ background-attachment: fixed;">
           </div>
         {% endif %}
       </article>
-      {% include 'related_articles.html' %}
-      <div class="comment-section"><!-- Comments -->
-        {% include 'flasqus_script.html' %}
+      <div class="comments my-3">
+        <form method="post" action="https://api.staticman.net/v2/entry/uetke/website_content/master/">
+          <input name="options[redirect]" type="hidden" value="{{ SITEURL }}/{{ article.slug }}">
+          <input name="fields[url]" type="hidden" value="{{ article.slug }}">
+            <div class="form-group row">
+                <label for="name" class="col-sm-2 col-form-label">Name:</label>
+              <div class="col-sm-10">
+                <input class="form-control" name="fields[name]" type="text" id="name">
+              </div>
+            </div>
+            <div class="form-group row">
+              <label for="email" class="col-sm-2 col-form-label">E-mail:</label>
+              <div class="col-sm-10">
+                <input name="fields[email]" class="form-control" id="email" type="email">
+              </div>
+            </div>
+            <div class="form-group row">
+              <label class="col-sm-2 col-form-label" for="website">Website:</label>
+              <div class="col-sm-10">
+               <input name="fields[url]" class="form-control" id="website" type="text">
+              </div>
+            </div>
+            <div class="form-group row">
+              <label class="col-sm-2 col-form-label" for="message">Message:</label>
+              <div class="col-sm-10">
+                <textarea name="fields[message]" class="form-control" id="message"></textarea>
+              </div>
+            </div>
+            <button type="submit" class="btn btn-primary mb-2">Submit</button>
+        </form>
       </div>
+      {% include 'related_articles.html' %}
     </div>
 
     <!-- SIDEBAR -->
