--- a/template/uetke/templates/article.html
+++ b/template/uetke/templates/article.html
@@ -98,7 +98,7 @@ background-attachment: fixed;">
             <div class="form-group row">
               <label class="col-sm-2 col-form-label" for="website">Website:</label>
               <div class="col-sm-10">
-               <input name="fields[url]" class="form-control" id="website" type="text">
+               <input name="fields[website]" class="form-control" id="website" type="text">
               </div>
             </div>
             <div class="form-group row">
