Added icon for RSS and Github

--- a/template/uetke/templates/base.html
+++ b/template/uetke/templates/base.html
@@ -90,6 +90,12 @@ window.cookieconsent.initialise({
           <li class="nav-item mx-1">
             <a class="btn btn-light" href="{{ SITEURL }}/contact">Contact</a>
           </li>
+          <li class="nav-item mx-1">
+            <a href="/feed.rss"><img src="{{ SITEURL }}/theme/img/rss.svg" style="height: 38px"></a>
+          </li>
+          <li class="nav-item mx-1">
+            <a href="https://github.com/uetke"><img src="{{ SITEURL }}/theme/img/github.svg" style="height: 38px"></a>
+          </li>
         </ul>
       </div>
     </div>
@@ -117,7 +123,7 @@ window.cookieconsent.initialise({
       </div>
       <div class="row">
         <div class="col-md-12 my-3 text-center">
-          <p class="text-muted">© Copyright 2018 Uetke | <a href="{{ SITEURL }}/privacy">Privacy Policy</a></p>
+          <p class="text-muted">© Copyright 2018 Uetke | <a href="{{ SITEURL }}/contact">Contact Us</a> | <a href="{{ SITEURL }}/feed.rss">RSS feed</a> |<a href="{{ SITEURL }}/privacy">Privacy Policy</a></p>
         </div>
       </div>
     </div>
