Configured staticman comments

--- a/template/uetke/static/css/uetke.css
+++ b/template/uetke/static/css/uetke.css
@@ -387,3 +387,8 @@ newsletter-body p{
   top: 20px;
   width: 213px;
 }
+
+.form-group.required .control-label:after {
+  content:"*";
+  color:red;
+}
