Comments working and stylized

--- a/template/uetke/templates/article.html
+++ b/template/uetke/templates/article.html
@@ -158,6 +158,7 @@ $(document).ready(function () {
        }
    });
 });
+</script>
 {% endblock %}
 {% block custom_header_links %}
 {% endblock %}
