Added fastspring code and made navbar change color agin

--- a/template/uetke/templates/article.html
+++ b/template/uetke/templates/article.html
@@ -79,6 +79,16 @@ background-attachment: fixed;">
           </div>
         {% endif %}
       </article>
+    <div class="row">
+          <div class="card">
+              <div class="card-header">
+                  Support us
+              </div>
+              <div class="card-body">
+                  If you like the content of this website, consider buying a copy of the book <a href="https://pythonforthelab.onfastspring.com/python-for-the-lab-book">Python For The Lab</a>
+              </div>
+          </div>
+      </div>
       <div class="comments my-3">
         <h3 id="comments">COMMENTS</h3>
         <div id="current-comments"></div>
@@ -119,6 +129,16 @@ background-attachment: fixed;">
     <!-- SIDEBAR -->
 
     <div class="col-md-3 side-bar d-none d-md-block">
+      <div class="row">
+          <div class="card">
+              <div class="card-header">
+                  Support us
+              </div>
+              <div class="card-body">
+                  If you like the content of this website, consider buying a copy of the book <a href="https://pythonforthelab.onfastspring.com/python-for-the-lab-book">Python For The Lab</a>
+              </div>
+          </div>
+      </div>
       <div class="row">
         <div class="share-sidebar">
         {% if article.share_post and article.status != 'draft' %}
