Updated cookie and privacy policy

--- a/template/uetke/templates/base.html
+++ b/template/uetke/templates/base.html
@@ -44,24 +44,22 @@
   <!-- Font Awesome Javascript -->
 {#  <script src="{{ SITEURL }}/theme/js/fontawesome-all.min.js" defer></script>#}
   <!-- Cookie Consent -->
-  <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" />
+<link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" />
 <script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js"></script>
 <script>
 window.addEventListener("load", function(){
 window.cookieconsent.initialise({
   "palette": {
     "popup": {
-      "background": "#edeff5",
-      "text": "#838391"
+      "background": "#237afc"
     },
     "button": {
-      "background": "#4b81e8"
+      "background": "#fff",
+      "text": "#237afc"
     }
   },
-  "theme": "classic",
-  "position": "bottom-left",
   "content": {
-    "href": "https://www.uetke.com/privacy/"
+    "href": "https://www.uetke.com/cookie-policy/"
   }
 })});
 </script>
@@ -128,7 +126,7 @@ window.cookieconsent.initialise({
       </div>
       <div class="row">
         <div class="col-md-12 my-3 text-center">
-          <p class="text-muted">© Copyright 2018 Uetke | <a href="{{ SITEURL }}/contact">Contact Us</a> | <a href="{{ SITEURL }}/feed.rss">RSS feed</a> |<a href="{{ SITEURL }}/privacy">Privacy Policy</a></p>
+          <p class="text-muted">© Copyright 2018 Uetke | <a href="{{ SITEURL }}/contact">Contact Us</a> | <a href="{{ SITEURL }}/feed.rss">RSS feed</a> | <a href="{{ SITEURL }}/privacy">Privacy Policy</a> | <a href="{{ SITEURL }}/cookie-policy">Cookies</a></p>
         </div>
       </div>
     </div>
