--- a/template/uetke/templates/static_pages/privacy.html
+++ b/template/uetke/templates/static_pages/privacy.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
-{% block title %}Python for the Lab: The definitive course for scientists{% endblock %}
-{% block description %}Python for the Lab is the ultimate course for scientists who want to gain control over their experiment{% endblock %}
-{% block keywords %}User Interface, GUI, courses{% endblock %}
+{% block title %}Privacy Policy{% endblock %}
+{% block description %}Privacy Policy{% endblock %}
+{% block keywords %}Privacy{% endblock %}
 
 {% block content %}
 <div class="container">
