Added back the fontawesome js

--- a/template/uetke/templates/base.html
+++ b/template/uetke/templates/base.html
@@ -49,7 +49,7 @@
     <!-- Script: Animated entrance -->
     {#  <script src="{{ SITEURL }}/theme/js/animate-in.js" defer></script>#}
     <!-- Font Awesome Javascript -->
-    {#  <script src="{{ SITEURL }}/theme/js/fontawesome-all.min.js" defer></script>#}
+    <script src="{{ SITEURL }}/theme/js/fontawesome-all.min.js" defer></script>
     <!-- Cookie Consent -->
     <link rel="stylesheet" type="text/css"
           href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css"/>
