Updated privacy policy

--- a/template/uetke/templates/static_pages/cookie.html
+++ b/template/uetke/templates/static_pages/cookie.html
@@ -4,13 +4,13 @@
 {% block keywords %}Cookies{% endblock %}
 
 {% block content %}
-    <div class="container">
+    <div class="container mt-2">
         <div class="row">
             <div class="col-10">
                 <h1>Cookie Policy for Uetke</h1>
                 <p>This is the Cookie Policy for Uetke, accessible from https://www.uetke.com</p>
 
-                <p><b>Python for the Lab</b> does not store cookies on your computer, neither from third parties. We use
+                <p><b>Uetke</b> does not store cookies on your computer, nor ours nor from third parties. We use
                     server
                     access logs to monitor the most popular articles and detect possible problems or abuses of the
                     website.</p>
