--- a/template/uetke/templates/base.html
+++ b/template/uetke/templates/base.html
@@ -29,18 +29,40 @@
     <!-- FEEDS -->
     <link rel="alternate" type="application/rss+xml" title="RSS Feed for Uetke.com" href="/feed.rss"/>
     <link rel="alternate" type="application/atom+xml" title="Atom Feed for Uetke.com" href="/atom.xml"/>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="{{ SITEURL }}/theme/js/jquery-3.3.1.min.js"></script>
     <!-- Script: Make my navbar transparent when the document is scrolled to top -->
-    <script src="{{ SITEURL }}/theme/js/navbar-ontop.js" defer></script>
+    <script src="{{ SITEURL }}/theme/js/navbar-ontop.js"></script>
     <!-- Font Awesome Javascript -->
     <script src="{{ SITEURL }}/theme/js/fontawesome-all.min.js" defer></script>
-    <script
-            id="fsc-api"
-            src="https://d1f8f9xcsvx3ha.cloudfront.net/sbl/0.7.5/fastspring-builder.min.js"
-            type="text/javascript"
-            data-storefront="pythonforthelab.onfastspring.com/popup-pftl-book">
-    </script>
     {% block custom_header_links %}{% endblock %}
+    <!-- Start of Async Drift Code -->
+    <script>
+        "use strict";
+
+        !function () {
+            var t = window.driftt = window.drift = window.driftt || [];
+            if (!t.init) {
+                if (t.invoked) return void (window.console && console.error && console.error("Drift snippet included twice."));
+                t.invoked = !0, t.methods = ["identify", "config", "track", "reset", "debug", "show", "ping", "page", "hide", "off", "on"],
+                    t.factory = function (e) {
+                        return function () {
+                            var n = Array.prototype.slice.call(arguments);
+                            return n.unshift(e), t.push(n), t;
+                        };
+                    }, t.methods.forEach(function (e) {
+                    t[e] = t.factory(e);
+                }), t.load = function (t) {
+                    var e = 3e5, n = Math.ceil(new Date() / e) * e, o = document.createElement("script");
+                    o.type = "text/javascript", o.async = !0, o.crossorigin = "anonymous", o.src = "https://js.driftt.com/include/" + n + "/" + t + ".js";
+                    var i = document.getElementsByTagName("script")[0];
+                    i.parentNode.insertBefore(o, i);
+                };
+            }
+        }();
+        drift.SNIPPET_VERSION = '0.3.1';
+        drift.load('dh5eit7z3tmk');
+    </script>
+    <!-- End of Async Drift Code -->
 </head>
 
 <body>
@@ -95,8 +117,9 @@
         <div class="row">
             <div class="col-md-12 my-3 text-center">
                 <p class="text-muted">© Copyright 2018 Uetke | <a href="{{ SITEURL }}/contact">Contact Us</a> | <a
-                        href="{{ SITEURL }}/feed.rss">RSS feed</a> | <a href="{{ SITEURL }}/privacy">Privacy Policy</a> | <a
-                        href="{{ SITEURL }}/cookie-policy">Cookies</a></p>
+                        href="{{ SITEURL }}/feed.rss">RSS feed</a> | <a href="{{ SITEURL }}/privacy">Privacy Policy</a>
+                    | <a
+                            href="{{ SITEURL }}/cookie-policy">Cookies</a></p>
             </div>
         </div>
     </div>
@@ -106,9 +129,7 @@
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"
-        integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb"
-        crossorigin="anonymous"></script>
+<script src="{{ SITEURL }}/theme/js/tether.min.js"></script>
 <script src="{{ SITEURL }}/theme/js/bootstrap.min.js"></script>
 <script src="{{ SITEURL }}/theme/js/newsletter_subscribe.js"></script>
 {% block footer_scripts %}{% endblock %}
